--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -165,6 +165,9 @@
     <Compile Include="ForDisplayingInDataGrids\RawDataForDataGrid.cs" />
     <Compile Include="ForDisplayingInDataGrids\PreRunTask.cs" />
     <Compile Include="Parameter.cs" />
+    <Compile Include="NeoSearchTaskWindow.xaml.cs">
+      <DependentUpon>NeoSearchTaskWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SearchTaskWindow.xaml.cs">
       <DependentUpon>SearchTaskWindow.xaml</DependentUpon>
     </Compile>
@@ -203,6 +206,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="MetaUpdater.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="NeoSearchTaskWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
