--- a/TaskLayer/TaskLayer.csproj
+++ b/TaskLayer/TaskLayer.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="FlashLFQ" Version="0.1.100" />
-    <PackageReference Include="MathNet.Numerics" Version="3.20.1" />
+    <PackageReference Include="MathNet.Numerics" Version="4.0.0-beta04" />
     <PackageReference Include="mzLib" Version="1.0.268" />
     <PackageReference Include="NetSerializer" Version="4.1.0" />
     <PackageReference Include="Nett" Version="0.8.0" />
