--- a/EngineLayer/Neo/TomlFiles/SearchTaskCconfig.toml
+++ b/EngineLayer/Neo/TomlFiles/SearchTaskCconfig.toml
@@ -19,6 +19,7 @@ DoQuantification = false
 SearchType = "Modern"
 MaxFragmentSize = 30000.0
 HistogramBinTolInDaltons = 0.003
+WeightIons = 600.0
 
 [SearchParameters.ModsToWriteSelection]
 ProteinTermMod = 3
@@ -35,15 +36,15 @@ UseProvidedPrecursorInfo = true
 DeconvolutionIntensityRatio = 3.0
 DeconvolutionMaxAssumedChargeState = 12
 DeconvolutionMassTolerance = "±4.0000 PPM"
-TotalPartitions = 1
+TotalPartitions = 4
 BIons = false
 YIons = true
 ZdotIons = false
 CIons = false
-ProductMassTolerance = "±20.0000 PPM"
-PrecursorMassTolerance = "±5.0000 PPM"
+ProductMassTolerance = "±23.2000 PPM"
+PrecursorMassTolerance = "±4.2000 PPM"
 ConserveMemory = true
-ScoreCutoff = 5.0
+ScoreCutoff = 4.0
 ReportAllAmbiguity = false
 ExcelCompatible = true
 TopNpeaks = 200
