--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="SharpLearning.CrossValidation" Version="0.26.7.2" />
     <PackageReference Include="SharpLearning.DecisionTrees" Version="0.26.7.2" />
     <PackageReference Include="SharpLearning.Metrics" Version="0.26.7.2" />
+    <PackageReference Include="ZeroFormatter" Version="1.6.4" />
+    <PackageReference Include="ZeroFormatter.Analyzer" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
