--- a/EngineLayer/Neo/TomlFiles/SearchTaskCconfig.toml
+++ b/EngineLayer/Neo/TomlFiles/SearchTaskCconfig.toml
@@ -36,13 +36,13 @@ UseProvidedPrecursorInfo = true
 DeconvolutionIntensityRatio = 3.0
 DeconvolutionMaxAssumedChargeState = 12
 DeconvolutionMassTolerance = "±4.0000 PPM"
-TotalPartitions = 4
+TotalPartitions = 16
 BIons = false
 YIons = true
 ZdotIons = false
 CIons = false
-ProductMassTolerance = "±23.2000 PPM"
-PrecursorMassTolerance = "±4.2000 PPM"
+ProductMassTolerance = "±23.0000 PPM"
+PrecursorMassTolerance = "±5.0000 PPM"
 ConserveMemory = true
 ScoreCutoff = 4.0
 ReportAllAmbiguity = false
@@ -58,9 +58,9 @@ CalculateEValue = false
 MaxMissedCleavages = 2
 InitiatorMethionineBehavior = "Variable"
 MinPeptideLength = 4
-MaxPeptideLength = 13
+MaxPeptideLength = 50
 MaxModificationIsoforms = 4096
 MaxModsForPeptide = 3
 Protease = "singleC"
 SemiProteaseDigestion = false
-TerminusTypeSemiProtease = "N"
+TerminusTypeSemiProtease = "None"
