--- a/EngineLayer/Neo/TomlFiles/SearchTaskCisconfig.toml
+++ b/EngineLayer/Neo/TomlFiles/SearchTaskCisconfig.toml
@@ -40,8 +40,8 @@ BIons = true
 YIons = true
 ZdotIons = false
 CIons = false
-ProductMassTolerance = "±23.2000 PPM"
-PrecursorMassTolerance = "±4.2000 PPM"
+ProductMassTolerance = "±23.0000 PPM"
+PrecursorMassTolerance = "±5.0000 PPM"
 ConserveMemory = true
 ScoreCutoff = 5.0
 ReportAllAmbiguity = true
@@ -56,9 +56,9 @@ CalculateEValue = false
 [CommonParameters.DigestionParams]
 MaxMissedCleavages = 2
 InitiatorMethionineBehavior = "Variable"
-MinPeptideLength = 8
+MinPeptideLength = 6
 MaxModificationIsoforms = 4096
 MaxModsForPeptide = 3
 Protease = "top-down"
 SemiProteaseDigestion = false
-TerminusTypeSemiProtease = "N"
+TerminusTypeSemiProtease = "None"
