--- a/CMD/CMD.csproj
+++ b/CMD/CMD.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FlashLFQ" Version="0.1.100" />
-    <PackageReference Include="FluentCommandLineParser" Version="1.4.3" />
+    <PackageReference Include="FluentCommandLineParser" Version="1.5.0.20-commands" />
     <PackageReference Include="mzLib" Version="1.0.272" />
     <PackageReference Include="Nett" Version="0.8.0" />
   </ItemGroup>
