--- a/EngineLayer/Neo/TomlFiles/SearchTaskNconfig.toml
+++ b/EngineLayer/Neo/TomlFiles/SearchTaskNconfig.toml
@@ -19,7 +19,7 @@ DoQuantification = false
 SearchType = "Modern"
 MaxFragmentSize = 30000.0
 HistogramBinTolInDaltons = 0.003
-WeightIons = 600.0
+MaximumMassThatFragmentIonScoreIsDoubled = 600.0
 
 [SearchParameters.ModsToWriteSelection]
 ProteinTermMod = 3
@@ -28,15 +28,16 @@ UniProt = 2
 [CommonParameters]
 MaxParallelFilesToAnalyze = 1
 MaxThreadsToUsePerFile = 7
-LocalizeAll = true
+LocalizeAll = false
 ListOfModsFixed = "Common Fixed\tCarbamidomethyl of C"
-ListOfModsVariable = "Common Variable\tOxidation of M"
+ListOfModsVariable = ""
+ListOfModsLocalize = ""
 DoPrecursorDeconvolution = false
 UseProvidedPrecursorInfo = true
 DeconvolutionIntensityRatio = 3.0
 DeconvolutionMaxAssumedChargeState = 12
 DeconvolutionMassTolerance = "±4.0000 PPM"
-TotalPartitions = 16
+TotalPartitions = 8
 BIons = true
 YIons = false
 ZdotIons = false
