--- a/GUI/packages.config
+++ b/GUI/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FlashLFQ" version="0.1.100" targetFramework="net471" />
-  <package id="MathNet.Numerics" version="3.20.2" targetFramework="net471" />
+  <package id="MathNet.Numerics" version="4.0.0-beta05" targetFramework="net471" />
   <package id="mzLib" version="1.0.272" targetFramework="net471" />
   <package id="Nett" version="0.8.0" targetFramework="net471" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="11.0.1-beta3" targetFramework="net471" />
   <package id="SharpLearning.AdaBoost" version="0.26.7.2" targetFramework="net471" />
   <package id="SharpLearning.Common.Interfaces" version="0.26.7.2" targetFramework="net471" />
   <package id="SharpLearning.Containers" version="0.26.7.2" targetFramework="net471" />
