--- a/EngineLayer/Neo/TomlFiles/GptmdTaskconfig.toml
+++ b/EngineLayer/Neo/TomlFiles/GptmdTaskconfig.toml
@@ -7,7 +7,7 @@ ListOfModsGptmd = "Glycan\tHexNAc on Nxs\t\tGlycan\tHexNAc on Nxt\t\tGlycan\tHex
 MaxParallelFilesToAnalyze = 1
 MaxThreadsToUsePerFile = 7
 LocalizeAll = true
-ListOfModsFixed = "Common Fixed\tCarbamidomethyl of C"
+ListOfModsFixed = "Common Fixed\tCarbamidomethyl of C\t\tCommon Fixed\tCarbamidomethyl of U"
 ListOfModsVariable = "Common Variable\tOxidation of M"
 DoPrecursorDeconvolution = true
 UseProvidedPrecursorInfo = true
@@ -19,8 +19,8 @@ BIons = true
 YIons = true
 ZdotIons = false
 CIons = false
-ProductMassTolerance = "±23.2000 PPM"
-PrecursorMassTolerance = "±4.0800 PPM"
+ProductMassTolerance = "±23.0000 PPM"
+PrecursorMassTolerance = "±4.0000 PPM"
 ConserveMemory = true
 ScoreCutoff = 5.0
 ReportAllAmbiguity = true
