--- a/EngineLayer/Neo/TomlFiles/SearchTaskCisconfig.toml
+++ b/EngineLayer/Neo/TomlFiles/SearchTaskCisconfig.toml
@@ -28,7 +28,7 @@ UniProt = 2
 MaxParallelFilesToAnalyze = 1
 MaxThreadsToUsePerFile = 7
 LocalizeAll = true
-ListOfModsFixed = "Common Fixed\tCarbamidomethyl of C"
+ListOfModsFixed = "Common Fixed\tCarbamidomethyl of C\t\tCommon Fixed\tCarbamidomethyl of U"
 ListOfModsVariable = "Common Variable\tOxidation of M"
 DoPrecursorDeconvolution = false
 UseProvidedPrecursorInfo = true
@@ -41,7 +41,7 @@ YIons = true
 ZdotIons = false
 CIons = false
 ProductMassTolerance = "±23.0000 PPM"
-PrecursorMassTolerance = "±5.0000 PPM"
+PrecursorMassTolerance = "±4.0000 PPM"
 ConserveMemory = true
 ScoreCutoff = 5.0
 ReportAllAmbiguity = true
