--- a/EngineLayer/Neo/TomlFiles/SearchTaskCisconfig.toml
+++ b/EngineLayer/Neo/TomlFiles/SearchTaskCisconfig.toml
@@ -29,7 +29,7 @@ MaxParallelFilesToAnalyze = 1
 MaxThreadsToUsePerFile = 7
 LocalizeAll = true
 ListOfModsFixed = "Common Fixed\tCarbamidomethyl of C\t\tCommon Fixed\tCarbamidomethyl of U"
-ListOfModsVariable = "Common Variable\tOxidation of M"
+ListOfModsVariable = ""
 DoPrecursorDeconvolution = false
 UseProvidedPrecursorInfo = true
 DeconvolutionIntensityRatio = 3.0
