--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -121,6 +121,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
@@ -177,6 +179,9 @@
     <Compile Include="ForDisplayingInDataGrids\ProteinDbForDataGrid.cs" />
     <Compile Include="InRunTask.cs" />
     <Compile Include="TheTemplateSelector.cs" />
+    <Compile Include="NeoSearchTaskWindow.xaml.cs">
+      <DependentUpon>NeoSearchTaskWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="XLSearchTaskWindow.xaml.cs">
       <DependentUpon>XLSearchTaskWindow.xaml</DependentUpon>
     </Compile>
@@ -213,6 +218,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="SearchTaskWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="NeoSearchTaskWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
