--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -22,6 +22,9 @@
     <None Update="elements.dat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="sliced-db.fa">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="sliced-db.fasta">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
