--- a/GUI/packages.config
+++ b/GUI/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MathNet.Numerics" version="4.2.0" targetFramework="net471" />
+  <package id="MathNet.Numerics.MKL.Win" version="2.2.0" targetFramework="net471" />
   <package id="mzLib" version="1.0.288" targetFramework="net471" />
   <package id="Nett" version="0.8.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net471" />
@@ -13,6 +14,7 @@
   <package id="SharpLearning.GradientBoost" version="0.26.8.1" targetFramework="net471" />
   <package id="SharpLearning.InputOutput" version="0.26.8.1" targetFramework="net471" />
   <package id="SharpLearning.Metrics" version="0.26.8.1" targetFramework="net471" />
+  <package id="SharpLearning.Optimization" version="0.26.8.1" targetFramework="net471" />
   <package id="SharpLearning.RandomForest" version="0.26.8.1" targetFramework="net471" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net471" />
 </packages>
