--- a/GUI/packages.config
+++ b/GUI/packages.config
@@ -9,6 +9,7 @@
   <package id="SharpLearning.Containers" version="0.26.8.1" targetFramework="net471" />
   <package id="SharpLearning.CrossValidation" version="0.26.8.1" targetFramework="net471" />
   <package id="SharpLearning.DecisionTrees" version="0.26.8.1" targetFramework="net471" />
+  <package id="SharpLearning.GradientBoost" version="0.26.8.1" targetFramework="net471" />
   <package id="SharpLearning.InputOutput" version="0.26.8.1" targetFramework="net471" />
   <package id="SharpLearning.Metrics" version="0.26.8.1" targetFramework="net471" />
   <package id="SharpLearning.Optimization" version="0.26.8.1" targetFramework="net471" />
