--- a/TaskLayer/TaskLayer.csproj
+++ b/TaskLayer/TaskLayer.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="SharpLearning.Containers" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.CrossValidation" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.DecisionTrees" Version="0.26.8.1" />
+    <PackageReference Include="SharpLearning.GradientBoost" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.InputOutput" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.Metrics" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.Optimization" Version="0.26.8.1" />
