--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -7,13 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="mzLib" Version="1.0.288" />
+    <PackageReference Include="mzLib" Version="1.0.298" />
     <PackageReference Include="Nett" Version="0.8.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
     <PackageReference Include="SharpLearning.Common.Interfaces" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.Containers" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.CrossValidation" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.DecisionTrees" Version="0.26.8.1" />
+    <PackageReference Include="SharpLearning.GradientBoost" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.InputOutput" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.Metrics" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.Optimization" Version="0.26.8.1" />
