--- a/CMD/CMD.csproj
+++ b/CMD/CMD.csproj
@@ -8,12 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="FluentCommandLineParser" Version="1.4.3" />
-    <PackageReference Include="mzLib" Version="1.0.288" />
+    <PackageReference Include="mzLib" Version="1.0.298" />
     <PackageReference Include="Nett" Version="0.8.0" />
     <PackageReference Include="SharpLearning.Common.Interfaces" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.Containers" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.CrossValidation" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.DecisionTrees" Version="0.26.8.1" />
+    <PackageReference Include="SharpLearning.GradientBoost" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.InputOutput" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.Metrics" Version="0.26.8.1" />
     <PackageReference Include="SharpLearning.Optimization" Version="0.26.8.1" />
