--- a/GUI/packages.config
+++ b/GUI/packages.config
@@ -2,13 +2,14 @@
 <packages>
   <package id="MathNet.Numerics" version="4.2.0" targetFramework="net471" />
   <package id="MathNet.Numerics.MKL.Win" version="2.2.0" targetFramework="net471" />
-  <package id="mzLib" version="1.0.288" targetFramework="net471" />
+  <package id="mzLib" version="1.0.298" targetFramework="net471" />
   <package id="Nett" version="0.8.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net471" />
   <package id="SharpLearning.Common.Interfaces" version="0.26.8.1" targetFramework="net471" />
   <package id="SharpLearning.Containers" version="0.26.8.1" targetFramework="net471" />
   <package id="SharpLearning.CrossValidation" version="0.26.8.1" targetFramework="net471" />
   <package id="SharpLearning.DecisionTrees" version="0.26.8.1" targetFramework="net471" />
+  <package id="SharpLearning.GradientBoost" version="0.26.8.1" targetFramework="net471" />
   <package id="SharpLearning.InputOutput" version="0.26.8.1" targetFramework="net471" />
   <package id="SharpLearning.Metrics" version="0.26.8.1" targetFramework="net471" />
   <package id="SharpLearning.Optimization" version="0.26.8.1" targetFramework="net471" />
